--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -3,27 +3,25 @@
 .navbar{
     background: $mainBlack;
     padding: 0.5rem 1rem;
-    display: grid;
-    grid-template-columns: auto 1fr;
-    align-items: center;
 
 }
 .nav-links{
     list-style-type: none;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
     text-align: center;
 }
+span.navbar-toggler-icon{
+    color: $mainWhite !important;
+}
 .nav-link{
-    color: $mainGrey;
+    color: $mainGrey !important;
     text-transform: capitalize;
     text-decoration: none;
     font-size: 1.2rem;
     transition: all 0.3s linear; 
     &:hover{
-        color: $mainGreen;
+        color: $mainGreen !important;
     }
 }
 .active{
-    color: $mainGreen;
+    color: $mainGreen !important;
 }
