--- a/src/components/Restaurant/restaurant.scss
+++ b/src/components/Restaurant/restaurant.scss
@@ -2,6 +2,7 @@
 
 .restaurant{
     background: $mainGrey;
+    box-shadow: 0 5px 15px $mainBlack !important;
     margin: 2rem 0;
     font-size: 85%;
 
